--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,78 +1,55 @@
-version: '3.8'
+# 1. Definimos um modelo base para não repetir configurações
+x-servidor-config: &servidor-base
+  build: .
+  image: pix-app
+  stdin_open: true
+  tty: true
+  networks:
+    - pix-net
+  deploy:
+    resources:
+      limits:
+        cpus: '0.50'
+        memory: 512M
 
 services:
-  # === SERVIDOR 1 (Líder Inicial) ===
-  server1:
-    build: .
-    container_name: server1
-    hostname: server1
-    # Comando: ./servidor.exe <PORTA_CLIENTE> <ID> <IS_LEADER>
-    # Note que agora usamos porta 4000 e 5000 fixas, pois o IP muda
-    command: ./servidor.exe 4000 1 1 
-    networks:
-      pix_net:
-        ipv4_address: 10.0.0.1
-    volumes:
-      - .:/app # Permite editar o código no seu PC e recompilar dentro sem recriar o container
+  # 2. Servidor com ID 1
+  servidor-1:
+    <<: *servidor-base
+    command: ./servidor.exe 1 4000 5000
+    container_name: servidor-1
 
-  # === SERVIDOR 2 (Backup) ===
-  server2:
-    build: .
-    container_name: server2
-    hostname: server2
-    command: ./servidor.exe 4000 2 0
-    networks:
-      pix_net:
-        ipv4_address: 10.0.0.2
-    volumes:
-      - .:/app
+  # 3. Servidor com ID 2
+  servidor-2:
+    <<: *servidor-base
+    command: ./servidor.exe 2 4000 5001
+    container_name: servidor-2
+
+  # Clientes (Mantemos fixos para facilitar o 'attach' nos testes)
+  cliente1:
+    image: pix-app
+    container_name: cliente-1
+    command: ./cliente.exe 4000
+    stdin_open: true
+    tty: true
     depends_on:
-      - server1
-
-  # === SERVIDOR 3 (Backup) ===
-  server3:
-    build: .
-    container_name: server3
-    hostname: server3
-    command: ./servidor.exe 4000 3 0
+      - servidor-1
+      - servidor-2
     networks:
-      pix_net:
-        ipv4_address: 10.0.0.3
-    volumes:
-      - .:/app
+      - pix-net
+
+  cliente2:
+    image: pix-app
+    container_name: cliente-2
+    command: ./cliente.exe 4000
+    stdin_open: true
+    tty: true
     depends_on:
-      - server1
-
-  # === SERVIDOR 4 (Backup) ===
-  server4:
-    build: .
-    container_name: server4
-    hostname: server4
-    command: ./servidor.exe 4000 4 0
+      - servidor-1
+      - servidor-2
     networks:
-      pix_net:
-        ipv4_address: 10.0.0.4
-    volumes:
-      - .:/app
-    depends_on:
-      - server1
+      - pix-net
 
-  # === CLIENTE (Máquina para você rodar os testes) ===
-  client:
-    build: .
-    container_name: client
-    # O cliente fica parado esperando você entrar nele
-    command: tail -f /dev/null 
-    networks:
-      pix_net:
-        ipv4_address: 10.0.0.100
-    volumes:
-      - .:/app
-
-# Cria a rede com IPs estáticos
 networks:
-  pix_net:
+  pix-net:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 10.0.0.0/16
