--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-# 1. Definimos um modelo base para não repetir configurações
+# Definimos um modelo base para não repetir configurações
 x-servidor-config: &servidor-base
   build: .
   image: pix-app
   stdin_open: true
-  tty: true
+  # tty: true
   networks:
     - pix-net
   deploy:
@@ -13,17 +13,23 @@ x-servidor-config: &servidor-base
         memory: 512M
 
 services:
-  # 2. Servidor com ID 1
+  # Servidor 1
   servidor-1:
     <<: *servidor-base
     command: ./servidor.exe 4000 5000
     container_name: servidor-1
 
-  # 3. Servidor com ID 2
+  # Servidor 2
   servidor-2:
     <<: *servidor-base
     command: ./servidor.exe 4000 5000
     container_name: servidor-2
+
+  # Servidor 3
+  servidor-3:
+    <<: *servidor-base
+    command: ./servidor.exe 4000 5000
+    container_name: servidor-3
 
   # Clientes (Mantemos fixos para facilitar o 'attach' nos testes)
   cliente1:
@@ -31,10 +37,11 @@ services:
     container_name: cliente-1
     command: ./cliente.exe 4000
     stdin_open: true
-    tty: true
+    # tty: true
     depends_on:
       - servidor-1
       - servidor-2
+      - servidor-3
     networks:
       - pix-net
 
@@ -43,10 +50,11 @@ services:
     container_name: cliente-2
     command: ./cliente.exe 4000
     stdin_open: true
-    tty: true
+    # tty: true
     depends_on:
       - servidor-1
       - servidor-2
+      - servidor-3
     networks:
       - pix-net
 
