--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     container_name: cliente-1
     command: ./cliente.exe 4000
     stdin_open: true
-    # tty: true
+    tty: true
     depends_on:
       - servidor-1
       - servidor-2
@@ -50,7 +50,7 @@ services:
     container_name: cliente-2
     command: ./cliente.exe 4000
     stdin_open: true
-    # tty: true
+    tty: true
     depends_on:
       - servidor-1
       - servidor-2
